Complete hero and add image

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         </div>
     </nav>
     <div id="title-hero">
-        <div>
+        <div id="title">
         <h2>This website is awesome</h2>
-        <p>This website has some subtext that goes under the main title. It is smaller and lesser in color.</p>
+        <p>This website has some subtext that goes under the main title. It is a smaller font and the color is lower in contrast.</p>
         <button>Sign Up</button>
         </div>
         <div class="image">
-         <p>This is a placeholder for an image.</p>
+         <img src="./img/mountain.jpg" alt="Picture of cloudy mountain" width="500px" height="250px">
         </div>
     </div>
 </div>
