Complete information section with pictures

--- a/index.html
+++ b/index.html
@@ -32,7 +32,24 @@
 </div>
     <div id="section-two">
       <h3>Some random information.</h3>
-      
+      <div>
+      <figure>
+        <img src="./img/dog.jpg" alt="young golden dog laying down" caption="Cute Dog">
+        <figcaption>Cute yellow pup laying on a blanket.</figcaption>
+      </figure>
+      <figure>
+        <img src="./img/bridge.jpg" alt="top down view of person standing on bridge">
+        <figcaption>Cool bridge in the forest.</figcaption>
+      </figure>
+      <figure>
+        <img src="./img/snow.jpg" alt="snowy scene">
+        <figcaption>Ski season has begun!</figcaption>
+      </figure>
+      <figure>
+        <img src="./img/green.jpg" alt="green trees">
+        <figcaption>Bright green trees!</figcaption>
+      </figure>
+      </div>
     </div>
     <div id="quote">
       <p>This is an inspiring quote or a customer testimony. It looks great and aesthetically pleasing.</p>
