--- a/index.html
+++ b/index.html
@@ -52,14 +52,18 @@
       </div>
     </div>
     <div id="quote">
-      <p>This is an inspiring quote or a customer testimony. It looks great and aesthetically pleasing.</p>
-      <caption>-Thor, God of Thunder</caption>
+        <p>This is an inspiring quote or a customer testimony. It looks great and aesthetically pleasing.</p>
+        <p id="cite">-Thor, God of Thunder</p>
     </div>
     <div id="last-section">
-
+     <div>
+      <h3>Call to action! It's time!</h3>
+      <p>Sign up for our product by clicking the button right over there!</p>
+     </div>
+      <button>Sign Up</button>
     </div>
     <footer>
-
+      <p>Copyright Nobody</p>
     </footer>
 </body>
 </html>
