--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <p id="cite">-Thor, God of Thunder</p>
     </div>
     <div id="last-section">
-     <div>
+     <div id="action">
       <h3>Call to action! It's time!</h3>
       <p>Sign up for our product by clicking the button right over there!</p>
      </div>
